# helm-gate

./: .gitignore  Dockerfile  README.md  pyproject.toml
helmgate/: cli.py  license.py  report.py  scanner.py
helmgate/rules/: __init__.py  base.py  best_practices.py  security.py  values_rules.py
tests/: test_scanner.py
tests/fixtures/bad-chart/templates/: deployment.yaml
tests/fixtures/good-chart/templates/: deployment.yaml
