[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helmgate"
version = "0.2.0"
description = "Helm chart security scanner — detects misconfigurations and policy violations in rendered manifests and values files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Yunus Olgun", email = "yunus.olgun@outlook.com"}
]
keywords = [
    "helm", "kubernetes", "k8s", "linter", "security", "policy",
    "rbac", "devsecops", "misconfiguration", "scanner", "devops"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
    "Development Status :: 4 - Beta",
]

dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/yunusolgun/helm-gate"
Repository = "https://github.com/yunusolgun/helm-gate"
"Bug Tracker" = "https://github.com/yunusolgun/helm-gate/issues"

[project.scripts]
helmgate = "helmgate.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["helmgate*"]
